# crossroute-audit

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  scaffold_crossroute.sh
configs/: default.yaml
crossroute_audit/: __init__.py  cli.py
crossroute_audit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
crossroute_audit/attribution/: completeness.py  integrated_gradients.py  method_agreement.py
crossroute_audit/controls/: baselines.py
docs/: SPEC.md
schemas/: audit_report.schema.json  causal_effect.schema.json  control_status.schema.json  manifest.schema.json
scripts/: analyze_results.py  build_n100_dataset.py  build_n200_dataset.py  smoke_blip2.py
synthetic/: synthetic_faults.yaml
tests/: test_adapter_contract.py  test_adapter_dtype_robustness.py  test_adversarial.py  test_analysis.py  test_analyze_results.py  test_attribution.py  test_audit_report.py  test_audit_report_batch.py  test_benchmark.py  test_blip2_adapter.py  test_build_n100.py  test_causal_effect.py  test_cli.py  test_control_status.py  test_controls.py  test_dataset_loader.py  test_dataset_n200.py  test_diagnosis.py  test_distribution_align.py  test_flow_diagnostics.py  test_fusion.py  test_hooks_intervene.py  test_instructblip_adapter.py  test_llava_adapter.py  test_metric_validation.py  test_model_comparison.py  test_no_op_control.py  test_null_model.py  test_power.py  test_qwenvl_adapter.py  test_rank_alignment.py  test_report.py  test_robustness.py  test_schema.py  test_sensitivity.py  test_stats.py  test_structure_align.py  test_synthetic.py
(+43 files in other folders)
